--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
         <script src="js/jquery-2.0.2.min.js"></script>
     <script src="js/gitarra.js"></script>
+    <script src="js/akordy.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" type="text/css">
      <link rel="stylesheet" href="css/gitara.css" >
      <script src="js/bootstrap.min.js"></script>
